--- a/benim-kodlar/odev-3.html
+++ b/benim-kodlar/odev-3.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yemek Tarifleri</title>
 </head>
-<body style="background-color: gold;"">
-    <h1 style="color: brown;">...Saray Helvası...</h1>
+<body style="background-color: rgb(201, 233, 115);"">
+    <h1 style="color: rgba(136, 28, 28, 0.822);">...Saray Helvası...</h1>
     <p>
         Saray helvası Kocaeli ilinin İzmit ilçesine ait bir pişmaniye türüdür. Çeşitli adlarda anılan bu tatlıya Osmanlı Dönemi'nden beri Kocaeli ilinde "Saray Helvası olarak adlandırılmaktadır.
     </p>
@@ -16,11 +16,11 @@
         Ayşegül Karaman
     </p><hr>
     <p style="text-align: center;">
-        <u style="color: crimson;">
+        <u style="color: rgb(226, 32, 32);">
            <b>Kaç kişilik :</b> 
         </u>
          4 kişilik  
-        <u style="color: crimson;">
+        <u style="color: rgb(226, 24, 65);">
            <b>Hazırlanma Süresi :</b>
         </u>
         45 dk
@@ -30,7 +30,7 @@
         15 dk
     </p>
     <p style="padding-left: 37%;">
-        <span style="background-color: rgba(170, 36, 36, 0.911); color: aliceblue;">
+        <span style="background-color: rgb(141, 49, 49); color: aliceblue;">
             Saray Helvası tarifi için gerekli malzemeler
         </span><br>
     </p>
@@ -43,7 +43,7 @@
         </ul>
     </p> 
     <p style="padding-left: 37%;"> 
-        <span style="background-color: brown; color: aliceblue;">
+        <span style="background-color: rgb(141, 48, 48); color: aliceblue;">
             Üzeri için gerekli malzemeler
         </span><br>
     </p>  
