--- a/odev-5/odev-5.html
+++ b/odev-5/odev-5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Web-Tasarım/css/odev-5.css">
+    <link rel="stylesheet" href="/odev-5/odev-5.css">
     <title>Teknolojik Aletler</title>
 </head>
 <body style="background-color: #D5EEBB;">
@@ -13,9 +13,9 @@
     </h1>
     
     <p class="altBaslik">
-    <a href="/Web-Tasarım/html/odev-5.html">Ana sayfa</a>
-    <a href="/Web-Tasarım/html/odev-5-urunlerimiz.html">Ürünlerimiz</a>
-    <a href="/Web-Tasarım/html/odev-5-hakkımızda.html">Hakkımızda</a>
+    <a href="/odev-5/odev-5.html">Ana sayfa</a>
+    <a href="/odev-5/odev-5-urunlerimiz.html">Ürünlerimiz</a>
+    <a href="/odev-5/odev-5-hakkımızda.html">Hakkımızda</a>
     </p>
     
     <h2 style="text-align: center; color: #7A0BC0;">
