--- a/odev-6/odev-6.html
+++ b/odev-6/odev-6.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Web-Tasarım/css/odev-6.css">
+    <link rel="stylesheet" href="/odev-6/odev-6.css">
     <title>Google</title>
 </head>
 
@@ -19,12 +19,12 @@
             <a class="none hover" href="https://mail.google.com" target="_blank">Gmail</a>
             <a class="none hover" href="https://www.google.com.tr/imghp?hl=tr&tab=ri&authuser=0&ogbl"
                 target="_blank">Images</a>
-            <img class="apps" src="/Web-Tasarım/img/appsbutton.png" alt="apps">
+            <img class="apps" src="/odev-6/appsbutton.png" alt="apps">
             <input type="submit" class="btn" value="Sign In" onclick="location.href='https://github.com/ahmetbgdy9';">
         </div>
 
         <div>
-            <img class="logo" src="/Web-Tasarım/img/logo.png" alt="logo">
+            <img class="logo" src="/odev-6/logo.png" alt="logo">
         </div>
 
         <div class="search-area">
