--- a/odev-5/odev-5-hakkımızda.html
+++ b/odev-5/odev-5-hakkımızda.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hakkımızda</title>
-    <link rel="stylesheet" href="/Web-Tasarım/css/odev-5.css">
+    <link rel="stylesheet" href="/odev-5/odev-5.css">
 </head>
 <body style="background-color: #D5EEBB;">
     <h1 class="anaBaslik">
