--- a/basit-web-sitesi(html-css)/index.html
+++ b/basit-web-sitesi(html-css)/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
-    <div class="banner">
+    <div class="backround">
         <header>
             <a href="" class="logo">AHMET BUĞDAY</a>
             <nav class="navbar">
