--- a/Boostrap-2/index.html
+++ b/Boostrap-2/index.html
@@ -26,7 +26,7 @@
             <div class="navbar-nav ml-auto">
                 <a class="nav-link active" href="#">Ana Sayfa <span class="sr-only">(current)</span></a>
                 <a class="nav-link" href="#">Hakkımızda</a>
-                <a class="nav-link" href="#">Eğitim</a>
+                <a class="nav-link" href="#">Egitim</a>
                 <a class="nav-link" href="#">İletişim</a>
             </div>
         </div>
